--- a/challenge.ipynb
+++ b/challenge.ipynb
@@ -5,7 +5,7 @@
    "id": "87157f37",
    "metadata": {},
    "source": [
-    "# Imports"
+    "Import libraries and define constants"
    ]
   },
   {
@@ -33,30 +33,38 @@
    "id": "414c8954",
    "metadata": {},
    "source": [
-    "Load csv files and "
+    "Load and preprocess CSV data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "3918a5ab",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Citim CSV-urile\n",
+    "\n",
     "train_df = pd.read_csv(\"data/train.csv\")\n",
     "val_df = pd.read_csv(\"data/validation.csv\")\n",
     "test_df = pd.read_csv(\"data/test.csv\")\n",
-    "test_df['label'] = 0  # Etichetă dummy pentru test\n",
+    "test_df['label'] = 0  # Adding label column\n",
     "\n",
-    "# Adăugăm calea completă la imagini\n",
+    "# Path instead of id\n",
     "train_df[\"image_id\"] = train_df[\"image_id\"].apply(lambda x: os.path.join(\"data/train\", f\"{x}.png\"))\n",
     "val_df[\"image_id\"] = val_df[\"image_id\"].apply(lambda x: os.path.join(\"data/validation\", f\"{x}.png\"))\n",
     "test_df[\"image_id\"] = test_df[\"image_id\"].apply(lambda x: os.path.join(\"data/test\", f\"{x}.png\"))\n",
     "\n",
-    "# Convertim etichetele la string\n",
+    "# Convert labels to string\n",
     "train_df['label'] = train_df['label'].astype(str)\n",
     "val_df['label'] = val_df['label'].astype(str)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7950a071",
+   "metadata": {},
+   "source": [
+    "Set up image data generators"
    ]
   },
   {
@@ -95,8 +103,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6d184142",
+   "metadata": {},
+   "source": [
+    "Build the model using MobileNetV2 base and compile"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "83e8d06c",
    "metadata": {},
    "outputs": [
@@ -113,22 +129,30 @@
     "\n",
     "# Model: MobileNetV2\n",
     "base_model = MobileNetV2(include_top=False, input_shape=(*IMG_SIZE, 3), weights='imagenet')\n",
-    "base_model.trainable = False  # Congelăm feature extractorul\n",
+    "base_model.trainable = False\n",
     "\n",
     "model = models.Sequential([\n",
     "    base_model,\n",
     "    layers.GlobalAveragePooling2D(),\n",
     "    layers.Dense(128, activation='relu'),\n",
     "    layers.Dropout(0.3),\n",
-    "    layers.Dense(5, activation='softmax')  # 5 clase\n",
+    "    layers.Dense(5, activation='softmax')\n",
     "])\n",
     "\n",
     "model.compile(optimizer='adam', loss='sparse_categorical_crossentropy', metrics=['accuracy'])"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f274acc4",
+   "metadata": {},
+   "source": [
+    "Train the model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "f03f4da8",
    "metadata": {},
    "outputs": [
@@ -159,13 +183,20 @@
    ],
    "source": [
     "\n",
-    "# Antrenare\n",
     "history = model.fit(train_data, epochs=5, validation_data=val_data)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "03043ed3",
+   "metadata": {},
+   "source": [
+    "Make predictions on the test set and save predictions to submission file"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "5cac610f",
    "metadata": {},
    "outputs": [
@@ -180,21 +211,23 @@
    ],
    "source": [
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Predicții\n",
     "pred_probs = model.predict(test_data)\n",
     "pred_labels = np.argmax(pred_probs, axis=1)\n",
     "\n",
-    "# Salvare submission.csv\n",
     "submission = pd.DataFrame({\n",
     "    \"image_id\": test_df[\"image_id\"].apply(lambda x: os.path.splitext(os.path.basename(x))[0]),\n",
     "    \"label\": pred_labels\n",
     "})\n",
     "submission.to_csv(\"submission.csv\", index=False)\n",
-    "print(\"✅ Fișierul 'submission.csv' a fost salvat.\")\n"
+    "print(\"✅ Fisierul 'submission.csv' a fost salvat.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1acc47fd",
+   "metadata": {},
+   "source": [
+    "Save the trained model and variables"
    ]
   },
   {
