--- a/challenge.ipynb
+++ b/challenge.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "13f75e29",
    "metadata": {},
    "outputs": [
@@ -84,6 +84,7 @@
     }
    ],
    "source": [
+    "# normalizes the pixel values from [0, 255] to [0, 1], which helps neural networks train better.\n",
     "train_gen = ImageDataGenerator(rescale=1./255, horizontal_flip=True)\n",
     "val_gen = ImageDataGenerator(rescale=1./255)\n",
     "test_gen = ImageDataGenerator(rescale=1./255)\n",
